fixed tribeca.html file name on index.html

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 							</div>
 							
 
-							<a class="projectContainer" href="Tribeca.html">
+							<a class="projectContainer" href="tribeca.html">
 								<div class="grid-col-6of12">
 									<h1>Tribeca Film Festival Explore</h1>
 								</div>
