edited about me page + resume

--- a/about.html
+++ b/about.html
@@ -41,7 +41,8 @@
   </div>
 
   <div class="info-wrap">
-    <h4 class="hero-text">Hey, I'm <!-- <span> -->Maggie Liu<!-- </span> -->! <!-- <img src="img/about/me_1.jpg"> --> <br>A user experience & visual designer from Vancouver, BC.</h4>
+    <h4 class="hero-text">Hey, I'm <!-- <span> -->Maggie Liu<!-- </span> -->! <!-- <img src="img/about/me_1.jpg"> --> 
+    	<br>A Product Designer based in Amsterdam.</h4>
   </div>
 
   <div class="info-wrap project-info-wrap">
@@ -63,21 +64,15 @@
     </div>
 
     <div class="project-detail-content about">
-      <p>I recently graduated from Simon Fraser University. In 2018, I had the opportunity to intern at <a href="https://www.mediamonks.com/">MediaMonks</a>, Netherlands for 8 months as a UX designer.
-
-      <br><br>
-
-      I have learned the best results come from those who are passionate about the work they do. I love understanding people and brainstorming solutions to their complex problems.
-
-      <br><br>
+      <p>
 
       I love working with my hands to translate concepts into tangible forms, whether they are physical or digital.
 
       <br><br>
 
-      Travelling is a source of inspiration for me, so if there’s an opportunity to relocate, I’ll be very interested!
+			I am currently a Product Designer at <a href="https://www.akqa.com/studios/amsterdam//">AKQA Amsterdam</a>, working with the world's largest car manufacturer to elevate their digital experience platform and ensure seamless customer experience at every touchpoint.
 
-      <p style="font-size: 1.2rem">I am currently open to freelance or full-time positions, so let’s <a href="mailto:maggieliujx@gmail.com">chat</a>!</p>
+			</p>
 
     </div>
   </div>
@@ -88,7 +83,7 @@
     <div class="project-detail-content contact">
       <!-- <div class="contact"> -->
         <p><b>Reach me at:</b></p>
-        <p><a href="docs/Maggie Liu Resume.pdf">Resume</a></p>
+        <p><a href="docs/Maggie Liu Resume 2023.pdf">Resume</a></p>
         <p><a href="https://www.linkedin.com/in/maggieliujx/">LinkedIn</a></p>
         <p><a href="mailto:maggieliujx@gmail.com">maggieliujx@gmail.com</a></p>
       <!-- </div> -->
