--- a/about.html
+++ b/about.html
@@ -70,7 +70,11 @@
 
       <br><br>
 
-			I am currently a Product Designer at <a href="https://www.akqa.com/studios/amsterdam//">AKQA Amsterdam</a>, working with the world's largest car manufacturer to elevate their digital experience platform and ensure seamless customer experience at every touchpoint.
+			I am currently a Product Designer at <a href="https://www.akqa.com/studios/amsterdam//">AKQA Amsterdam</a>, working with the world's largest car manufacturer to elevate their digital experience platform and ensure a seamless customer experience at every touchpoint.
+
+ 			<br><br>
+ 			
+ 			I am always open to talk about my experiences and make new connections, so <a href="mailto:maggieliujx@gmail.com">let's chat</a>!
 
 			</p>
 
@@ -92,7 +96,7 @@
 
   <div class="info-wrap project-info-wrap">
     <div class="brand-title">
-      Cool brands I got to work with:
+      Brands I got to work with:
     </div>
   </div>
 
