--- a/index.html
+++ b/index.html
@@ -163,30 +163,65 @@ body {
 <script>
 const allPortfolioItems = document.querySelectorAll('.frame-3[data-index]');
 const allGalleryItems = document.querySelectorAll('.gallery-section [data-index]');
+const allHoverSwap = document.querySelectorAll('.hover-swap');
 
-// Highlight only one item at a time
+// Highlight only the portfolio title and gallery item
 function setHighlight(activeIndex) {
   allPortfolioItems.forEach(item => {
-    item.style.opacity = item.getAttribute('data-index') === activeIndex ? '1' : '0.25';
+    const title = item.querySelector('.text-wrapper-4');
+    const subtitle = item.querySelector('.text-wrapper-5');
+    if (title) {
+      // Dim all titles except the active one
+      title.style.opacity = item.getAttribute('data-index') === activeIndex ? '1' : '0.25';
+    }
+    if (subtitle) {
+      subtitle.style.opacity = item.getAttribute('data-index') === activeIndex ? '1' : '0.25';
+    }
+    item.style.opacity = '1'; // Keep the rest of the portfolio item fully opaque
   });
   allGalleryItems.forEach(item => {
-    if (window.innerWidth > 375 && window.innerWidth <= 768) {
-      // On tablet: show only the highlighted gallery item
-      item.style.display = item.getAttribute('data-index') === activeIndex ? 'block' : 'none';
+    item.style.opacity = item.getAttribute('data-index') === activeIndex ? '1' : '0.25';
+  });
+}
+
+// Show hover image on desktop
+function setGalleryHoverImages(enable) {
+  allHoverSwap.forEach(item => {
+    const defaultImg = item.querySelector('.default-img');
+    const hoverImg = item.querySelector('.hover-img');
+    if (enable) {
+      item.onmouseenter = () => {
+        setHighlight(item.getAttribute('data-index')); // <-- highlight on gallery hover
+        if (defaultImg) defaultImg.style.display = 'none';
+        if (hoverImg) hoverImg.style.display = 'block';
+      };
+      item.onmouseleave = () => {
+        resetHighlight();
+        if (defaultImg) defaultImg.style.display = 'block';
+        if (hoverImg) hoverImg.style.display = 'none';
+      };
+      // Ensure default state
+      if (defaultImg) defaultImg.style.display = 'block';
+      if (hoverImg) hoverImg.style.display = 'none';
     } else {
-      // On desktop/mobile: use opacity for highlight
-      item.style.opacity = item.getAttribute('data-index') === activeIndex ? '1' : '0.25';
-      item.style.display = 'block';
+      // Remove hover events and always show default image
+      item.onmouseenter = null;
+      item.onmouseleave = null;
+      if (defaultImg) defaultImg.style.display = 'block';
+      if (hoverImg) hoverImg.style.display = 'none';
     }
   });
 }
 
 function resetHighlight() {
-  allPortfolioItems.forEach(item => { item.style.opacity = '1'; });
-  allGalleryItems.forEach(item => {
+  allPortfolioItems.forEach(item => {
+    const title = item.querySelector('.text-wrapper-4');
+    const subtitle = item.querySelector('.text-wrapper-5');
+    if (title) title.style.opacity = '1';
+    if (subtitle) subtitle.style.opacity = '1';
     item.style.opacity = '1';
-    item.style.display = 'block';
   });
+  allGalleryItems.forEach(item => { item.style.opacity = '1'; });
 }
 
 function tabletHighlightLogic() {
@@ -200,6 +235,7 @@ function tabletHighlightLogic() {
       item.onmouseenter = null;
       item.onmouseleave = null;
     });
+    setGalleryHoverImages(false);
 
     // Highlight first item by default
     setHighlight('0');
@@ -216,15 +252,12 @@ function tabletHighlightLogic() {
       setHighlight(activeIndex);
     });
   } else {
-    // Reset highlight and restore hover logic for desktop/mobile
+    // Desktop: restore hover logic for highlight and gallery images
     allPortfolioItems.forEach(item => {
       item.onmouseenter = () => setHighlight(item.getAttribute('data-index'));
       item.onmouseleave = resetHighlight;
     });
-    allGalleryItems.forEach(item => {
-      item.onmouseenter = () => setHighlight(item.getAttribute('data-index'));
-      item.onmouseleave = resetHighlight;
-    });
+    setGalleryHoverImages(true); // <-- handles gallery hover highlight
     resetHighlight();
   }
 }
