--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body {
           </section>
 
           <section class="gallery-section grid-col-8of12">
-              <div class="grid-row--column grid-col-1of12" style="gap: 24px;">
+              <div class="grid-row--column grid-col-1of12">
                 <a href="#JDE" class="hover-swap" data-index="0">
                   <img src="img/index/jde_before.png" class="default-img" alt="JDE">
                   <img src="img/index/jde_after.gif" class="hover-img" alt="Alternate image">
@@ -111,7 +111,7 @@ body {
                 </a> 
               </div>
 
-              <div class="grid-row--column grid-col-2of12" style="gap: 24px;">
+              <div class="grid-row--column grid-col-2of12">
                 <a href="#Dolomiti" class="hover-swap" data-index="5">
                   <img src="img/index/dolomiti_before.png" class="default-img" alt="Dolomiti">
                   <img src="img/index/dolomiti_after.png" class="hover-img" alt="Alternate image">
@@ -123,7 +123,7 @@ body {
                 </a> 
               </div>
 
-              <div class="grid-row--column grid-col-3of12" style="gap: 24px;">
+              <div class="grid-row--column grid-col-3of12">
                 <a href="#Toyota" class="hover-swap" data-index="2">
                   <img src="img/index/toyota_before.png" class="default-img" alt="Toyota">
                   <img src="img/index/toyota_after.png" class="hover-img" alt="Alternate image">
@@ -135,7 +135,7 @@ body {
                 </a> 
               </div>
 
-              <div class="grid-row--column grid-col-2of12" style="gap: 24px;">
+              <div class="grid-row--column grid-col-2of12">
                 <a href="#Lufthansa" class="hover-swap" data-index="4">
                   <img src="img/index/lufthansa_before.png" class="default-img" alt="Lufthansa">
                   <img src="img/index/lufthansa_after.png" class="hover-img" alt="Alternate image">
