--- a/index.html
+++ b/index.html
@@ -271,21 +271,24 @@ function tabletHighlightLogic() {
     setHighlight('0');
     startGallerySwap('0');
 
-    // Scroll highlight
-    window.addEventListener('scroll', () => {
-      let activeIndex = '0';
-      document.querySelectorAll('.frame-3[data-index]').forEach(item => {
-        const rect = item.getBoundingClientRect();
-        if (rect.top < window.innerHeight / 2) {
-          activeIndex = item.getAttribute('data-index');
-        }
+    // attach scroll handler only once
+    if (!window._tabletScrollHandlerAttached) {
+      window._tabletScrollHandlerAttached = true;
+      window.addEventListener('scroll', () => {
+        let activeIndex = '0';
+        document.querySelectorAll('.frame-3[data-index]').forEach(item => {
+          const rect = item.getBoundingClientRect();
+          if (rect.top < window.innerHeight / 2) {
+            activeIndex = item.getAttribute('data-index');
+          }
+        });
+        setHighlight(activeIndex);
+        setActiveGalleryItem(activeIndex);
+        startGallerySwap(activeIndex);
       });
-      setHighlight(activeIndex);
-      setActiveGalleryItem(activeIndex);
-      startGallerySwap(activeIndex);
-    });
+    }
 
-    // Tap/click highlight
+    // Tap/click highlight (safe to reassign .onclick)
     document.querySelectorAll('.frame-3[data-index]').forEach(item => {
       item.onclick = () => {
         const index = item.getAttribute('data-index');
@@ -295,8 +298,9 @@ function tabletHighlightLogic() {
       };
     });
   } else {
+    // cleanup mobile/non-tablet state
     document.querySelectorAll('.gallery-section .hover-swap')
-      .forEach(item => item.classList.add('active'));
+      .forEach(item => item.classList.remove('active'));
     resetHighlight();
     stopGallerySwap();
 
@@ -342,18 +346,71 @@ function tabletHighlightLogic() {
 window.addEventListener('DOMContentLoaded', tabletHighlightLogic);
 window.addEventListener('resize', tabletHighlightLogic);
 </script>
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-  if (window.innerWidth >= 376 && window.innerWidth <= 768) {
-    const any = document.querySelector('.gallery-section .hover-swap.active');
-    if (!any) {
-      const first = document.querySelector('.gallery-section .hover-swap[data-index]');
-      if (first) first.classList.add('active');
-    }
-  }
-});
-</script>
 
+
+<script>
+/* Mobile column-switcher: show the column that contains the clicked gallery item
+   and ensure only one preview is visible. */
+(function () {
+  const MOBILE_MAX = 375;
+
+  function isMobile() { return window.innerWidth <= MOBILE_MAX; }
+
+  function showColumnForIndex(idx) {
+    const swaps = Array.from(document.querySelectorAll('.gallery-section .hover-swap[data-index]'));
+    const cols = Array.from(document.querySelectorAll('.gallery-section .grid-row--column'));
+    if (!swaps.length || !cols.length) return;
+
+    const target = swaps.find(s => s.getAttribute('data-index') === String(idx)) || swaps[0];
+    if (!target) return;
+    const targetIndex = target.getAttribute('data-index');
+
+    // mark only the target swap active
+    swaps.forEach(s => s.classList.toggle('active', s === target));
+
+    // mark only the column that contains the target swap
+    cols.forEach(col => {
+      const contains = !!col.querySelector(`.hover-swap[data-index="${targetIndex}"]`);
+      col.classList.toggle('active-col', contains);
+    });
+
+    // highlight corresponding portfolio item
+    document.querySelectorAll('.frame-3[data-index]').forEach(p => {
+      const is = p.getAttribute('data-index') === targetIndex;
+      p.classList.toggle('active', is);
+      p.classList.toggle('dimmed', !is);
+    });
+  }
+
+  function initMobileState() {
+    if (!isMobile()) {
+      // cleanup mobile-only state when leaving mobile
+      document.querySelectorAll('.gallery-section .grid-row--column').forEach(c => c.classList.remove('active-col'));
+      document.querySelectorAll('.gallery-section .hover-swap').forEach(s => s.classList.remove('active'));
+      document.querySelectorAll('.frame-3[data-index]').forEach(p => p.classList.remove('active','dimmed'));
+      return;
+    }
+    // pick existing active swap or fallback to first
+    const existing = document.querySelector('.gallery-section .hover-swap.active[data-index]') ||
+                     document.querySelector('.gallery-section .hover-swap[data-index]');
+    if (existing) showColumnForIndex(existing.getAttribute('data-index'));
+  }
+
+  document.addEventListener('DOMContentLoaded', initMobileState);
+  window.addEventListener('resize', initMobileState);
+
+  // taps on portfolio items or gallery previews activate that single column/preview
+  document.addEventListener('click', (e) => {
+    if (!isMobile()) return;
+    const el = e.target.closest('.frame-3[data-index], .gallery-section .hover-swap[data-index]');
+    if (!el) return;
+    const idx = el.getAttribute('data-index');
+    if (!idx) return;
+    e.preventDefault();
+    showColumnForIndex(idx);
+  }, true);
+})();
+</script>
 
 
 </body>
